--- a/style.css
+++ b/style.css
@@ -1,97 +1,98 @@
 body {
-    /* font-size: 15px; */
-    background-color: #090b1a;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
+  font-size: 15px;
+  background-color: #090b1a;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  height: 98vh;
 }
 
 section {
-    background-color: #1b1938;
-    display: flex;
-    border: 1px;
-    border-radius: 10px;
-    width: 80%;
-    height: 55%;
+  background-color: #1b1938;
+  display: flex;
+  border-radius: 10px;
+  width: 70%;
+  height: 55%;
+  align-self: center;
+  position: relative;
+  top: 10%;
 }
 
-#content, #imgBg {
-    width: 50%;
-    height: 100%;
+footer {    
+    align-self: flex-end;
+    text-align: center;
+    color: #ffffff;
 }
 
-#content {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
+footer a {
+    color: hsl(228, 45%, 44%);
 }
 
 p {
-    color: #ffffffbf;
+  color: #ffffffbf;
+  font-size: 1em;
 }
 
-.stats {
+h1 {
+  font-size: 2em;
+  color: #ffffff;
+}
+
+h2 {
+  font-size: 1.5em;
+  color: #ffffff;
+}
+
+span {
+  color: #aa5cdb;
+}
+
+h2+p {
     color: #ffffff99;
     text-transform: uppercase;
 }
 
-h1,h2 {
-    color: #ffffff;
+#content {
+  width: 50%;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-content: space-around;
 }
-
-h1 {
-    font-size: 2em;
-}
-
-h2 {
-    font-size: 1.5em;
-}
-
-#imgBg {
-    background-image: url('images/image-header-desktop.jpg');
-    border-top-right-radius: 10px;
-    border-bottom-right-radius: 10px;
-}
-
-#purple {
-    background-color: #734092;
-    height: 100%;
-    width: 100%;
-    border-top-right-radius: 10px;
-    border-bottom-right-radius: 10px;
-    opacity: 0.5;    
-}
-
 
 #main {
-    font-family: 'Inter', sans-serif;
-    display: flex;
-    flex-direction: column;
-    /* justify-content: flex-start; */
-    width: 65%;
-    height: 30%;
+  font-family: "Inter", sans-serif;
+  width: 66%;
+  height: 40%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
 }
 
 #stat {
-    font-family: 'Lexend Deca', sans-serif;
-    display: flex;
-    justify-content: space-between;
-    width: 65%;
-    height: 30%;
+  font-family: "Lexend Deca", sans-serif;
+  width: 66%;
+  height: 30%;
+  display: flex;
+  justify-content: space-between;
 }
 
-span {
-    color: #aa5cdb;
+#imgBg {
+  width: 50%;
+  height: 100%;
+  background: auto;
+  background-image: url("images/image-header-desktop.jpg");
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
 }
 
-#main>p {
-    line-height: 1.;
+#purple {
+  background-color: #542f6b;
+  height: 100%;
+  width: 100%;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+  opacity: 0.6;
 }
-
-/* 
-.attribution { font-size: 11px; text-align: center; }
-.attribution a { color: hsl(228, 45%, 44%); } 
-*/ 
-
