--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
 body {
-  font-size: 15px;
   background-color: #090b1a;
   display: flex;
   justify-content: center;
@@ -12,34 +11,35 @@ section {
   display: flex;
   border-radius: 10px;
   width: 70%;
-  height: 55%;
+  height: 50%;
   align-self: center;
   position: relative;
   top: 10%;
 }
 
-footer {    
-    align-self: flex-end;
-    text-align: center;
-    color: #ffffff;
+footer {
+  align-self: flex-end;
+  text-align: center;
+  color: #ffffff;
 }
 
 footer a {
-    color: hsl(228, 45%, 44%);
+  color: hsl(228, 45%, 44%);
 }
 
 p {
   color: #ffffffbf;
-  font-size: 1em;
+  font-size: 0.8em;
+  position: relative;
 }
 
 h1 {
-  font-size: 2em;
+  font-size: 1.7em;
   color: #ffffff;
 }
 
 h2 {
-  font-size: 1.5em;
+  font-size: 1.3em;
   color: #ffffff;
 }
 
@@ -47,9 +47,9 @@ span {
   color: #aa5cdb;
 }
 
-h2+p {
-    color: #ffffff99;
-    text-transform: uppercase;
+h2 + p {
+  color: #ffffff99;
+  text-transform: uppercase;
 }
 
 #content {
@@ -84,6 +84,7 @@ h2+p {
   height: 100%;
   background: auto;
   background-image: url("images/image-header-desktop.jpg");
+  background-size: cover;
   border-top-right-radius: 10px;
   border-bottom-right-radius: 10px;
 }
@@ -95,4 +96,67 @@ h2+p {
   border-top-right-radius: 10px;
   border-bottom-right-radius: 10px;
   opacity: 0.6;
+}
+
+@media (max-width: 980px) {
+  section {
+    height: 70%;
+    flex-direction: coloumn;
+    flex-wrap: wrap;
+  }
+  #imgBg {
+    order: 1;
+    width: 100%;
+    height: 40%;
+    border-bottom-right-radius: 0;
+    border-top-left-radius: 10px;
+  }
+  #content {
+    order: 2;
+    width: 100%;
+    height: 60%;
+  }
+  #purple {
+    border-bottom-right-radius: 0;
+    border-top-left-radius: 10px;
+  }
+}
+
+@media (max-width: 635px) {
+    body {
+        height: 150vh;
+    }
+}
+
+@media (max-width: 500px) {
+    body {
+        text-align: center;
+    }
+    #imgBg {
+        height: 25%;
+    }
+    #content {
+        height: 75%;
+    }
+    #stat {
+        flex-direction: column;
+        height: 50%;
+    }
+    #main {
+        height: 50%;
+    }
+
+}
+
+@media(max-width: 400px) {
+    section {
+        align-self: flex-start;
+        height: 80%;
+        position: relative;
+        bottom: 10%;
+    }
+    footer {
+        position: relative;
+        top: 5%;
+    }
 }
